Completed Controls Components and Began Data Entry October 17

--- a/MyFirstBlazorSolution/MyFirstBlazorApp/Components/Layout/NavMenu.razor
+++ b/MyFirstBlazorSolution/MyFirstBlazorApp/Components/Layout/NavMenu.razor
@@ -22,7 +22,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                <span class="fa-solid fa-cloud-sun-rain" aria-hidden="true"></span>&nbsp;&nbsp;Weather
             </NavLink>
         </div>
 
@@ -32,7 +32,7 @@
         -->
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="firstpage">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> First Page
+                <span class="fa-solid fa-spaghetti-monster-flying" aria-hidden="true"></span>&nbsp;&nbsp;First Page
             </NavLink>
         </div>
 
@@ -45,6 +45,12 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="controls">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Controls
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dataentry">
+                <span class="fa-solid fa-database" aria-hidden="true"></span>&nbsp;&nbsp;Data Entry
             </NavLink>
         </div>
     </nav>
