--- a/MyFirstBlazorSolution/MyFirstBlazorApp/Components/_Imports.razor
+++ b/MyFirstBlazorSolution/MyFirstBlazorApp/Components/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using MyFirstBlazorApp
 @using MyFirstBlazorApp.Components
+@using MyWebClassLibrary
 
 <!-- The using statements in this component are available globally to all other components.
      It will be necessary to take care that you do not include two or more assemblies that
