October 24 - Added functionality for EmploymentReport and Privacy page - Fully Commented

--- a/MyFirstBlazorSolution/MyFirstBlazorApp/Components/Layout/NavMenu.razor
+++ b/MyFirstBlazorSolution/MyFirstBlazorApp/Components/Layout/NavMenu.razor
@@ -53,6 +53,12 @@
                 <span class="fa-solid fa-database" aria-hidden="true"></span>&nbsp;&nbsp;Data Entry
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="privacy">
+                <span class="fa-solid fa-database" aria-hidden="true"></span>&nbsp;&nbsp;Privacy
+            </NavLink>
+        </div>
     </nav>
 </div>
 
