--- a/MyFirstBlazorSolution/MyFirstBlazorApp/Components/Pages/ExamplesPages/EmploymentReport.razor
+++ b/MyFirstBlazorSolution/MyFirstBlazorApp/Components/Pages/ExamplesPages/EmploymentReport.razor
@@ -1,7 +1,79 @@
 ﻿@page "/report"
 
-<h3>EmploymentReport</h3>
+<PageTitle>Tabular Report</PageTitle>
 
-@code {
+<h1>Employment Report</h1>
+<h3>
+    Demonstrates tabular reporting and File I/O extraction using File
+    Object methods.
+</h3>
 
+
+<!-- Not that the following if-else if-else ladder only needs the one beginning "at" symbol
+     Internal C# constructs will still need their own
+-->
+@if(employments == null) // If the List of employments was not even created (illegal file)
+{
+    <br />
+    <br />
+    <p><h4><b>You need a .csv file containing your employment data.</b></h4></p>
 }
+else if(employments.Count == 0) // If the .csv file was empty, thus no employments parsed
+{                               // This will also happen if all contained employments could
+                                // not be Parsed successfully.  Error messages will also display
+    <br />
+    <br />
+    <p><h4><b>No Employments in file to report.</b></h4></p>
+}
+else // The employments list has valid employment data.
+{
+    <!-- Create the table in HTML as normal.  The table class is from Bootstrap -->
+    <table class="table">
+        <thead>
+            <th>Title</th>
+            <th>Start Date</th>
+            <th>Level</th>
+            <th>Years</th>
+        </thead>
+        <tbody>
+            <!-- Create a dynamic row for the table from each employment in the List -->
+            @foreach(var item in employments)
+            {
+                <tr>
+                    <td>@item.Title</td>
+                    <td>@item.StartDate.ToShortDateString()</td>
+                    <td>@item.Level</td>
+                    <td>@item.Years</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+
+
+<!-- Standard feedback and error blocks -->
+@if (feedback.Length > 0)
+{
+    <div class="alert alert-info">
+        <p>@feedback</p>
+    </div>
+}
+
+@if (errorMessages.Count > 0)
+{
+    <div class="alert alert-danger">
+        <p>Please fix the following issues :</p>
+        <ul>
+            @foreach (var error in errorMessages)
+            {
+                <!-- Since this time we are using a List<string> instead of a 
+                     Dictionary, we do not need to specify the Value, just using
+                     "at"error directly is already in string format.-->
+                <li>@error</li>
+            }
+
+        </ul>
+    </div>
+}
+
+
