--- a/DBInteractionSolution/DBInteractionWebApp/Components/Layout/NavMenu.razor
+++ b/DBInteractionSolution/DBInteractionWebApp/Components/Layout/NavMenu.razor
@@ -37,6 +37,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Shipments
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="productCRUD">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product CRUD
+            </NavLink>
+        </div>
     </nav>
 </div>
 
