November 28 - ProductCRUD CRUD Operations Complete

--- a/DBInteractionSolution/DBInteractionWebApp/Components/Examples/ProductCRUD.razor
+++ b/DBInteractionSolution/DBInteractionWebApp/Components/Examples/ProductCRUD.razor
@@ -96,6 +96,27 @@
                 style="width: 200px" @onclick="OnCreate">
             Create
         </button>
+        &nbsp;&nbsp;
+        <button type="submit" class="btn btn-outline-secondary rounded-pill"
+                style="width: 200px" @onclick="OnUpdate">
+            Update
+        </button>
+        &nbsp;&nbsp;
+        <button type="submit" class="btn btn-outline-secondary rounded-pill"
+                style="width: 200px" @onclick="OnDiscontinue">
+            Discontinue
+        </button>
+        &nbsp;&nbsp;
+        <button type="submit" class="btn btn-outline-secondary rounded-pill"
+                style="width: 200px" @onclick="OnDelete">
+            Delete
+        </button>
+        &nbsp;&nbsp;
+        <button type="submit" class="btn btn-outline-secondary rounded-pill"
+                style="width: 200px" @onclick="OnClear">
+            Clear
+        </button>
+        &nbsp;&nbsp;
     </div>
 </div>
     <br /><br />
