--- a/DBInteractionSolution/DBInteractionWebApp/Components/Layout/NavMenu.razor
+++ b/DBInteractionSolution/DBInteractionWebApp/Components/Layout/NavMenu.razor
@@ -43,6 +43,12 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product CRUD
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="categoryProducts">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Category Products
+            </NavLink>
+        </div>
     </nav>
 </div>
 
